@@ -391,7 +391,9 @@ val maxv(val first, val rest);
 val minv(val first, val rest);
 val expt(val base, val exp);
 val exptv(val nlist);
+val exptmod(val base, val exp, val mod);
 val isqrt(val anum);
+val gcd(val anum, val bnum);
 val string_own(wchar_t *str);
 val string(const wchar_t *str);
 val string_utf8(const char *str);
